edited the header reloading method

--- a/dental-section.html
+++ b/dental-section.html
@@ -28,26 +28,33 @@
     <div class="header">
       <div class="links">
         <div class="left-links">
-          <a href="bodyFooter.html" class="logo"
-            ><img src="images/clinic2.png"
-          /></a>
+          <a href="bodyFooter.html" class="logo"><img src="images/clinic1.png"></a>
         </div>
         <div class="right-links">
-          <a href="contact.html" class="contact-header">Contact us</a>
+          <a href="#" class="contact-header" onclick="event.preventDefault(); laodingContact()">Contact us</a>
+          <script>
+            function laodingContact(){
+              window.location.href = 'contact.html'
+            }
+          </script>
           <a href="#serv" class="services-header">Services</a>
-          <a href="#" class="log-in">Login</a>
-
+          <a href="#" class="log-in" onclick="event.preventDefault(); myFunction()">Login</a>
+          <script>
+            function myFunction(){
+                window.location.href = 'login.html';
+            }
+          </script>
           <label class="switch">
-            <input type="checkbox" />
+            <input type="checkbox">
             <span class="slider">
               <span class="icon sun">☀️</span>
               <span class="icon moon">🌙</span>
             </span>
           </label>
         </div>
-      </div>
+      </div>    
     </div>
-
+    
     <!--Search Bar-->
     <form>
       <div class="search">
