--- a/pediatrician-doc1.html
+++ b/pediatrician-doc1.html
@@ -18,10 +18,19 @@
         <a href="bodyFooter.html" class="logo"><img src="images/clinic1.png"></a>
       </div>
       <div class="right-links">
-        <a href="contact.html" class="contact-header">Contact us</a>
+        <a href="#" class="contact-header" onclick="event.preventDefault(); laodingContact()">Contact us</a>
+        <script>
+          function laodingContact(){
+            window.location.href = 'contact.html'
+          }
+        </script>
         <a href="#serv" class="services-header">Services</a>
-        <a href="login.html" class="log-in">Login</a>
-  
+        <a href="#" class="log-in" onclick="event.preventDefault(); myFunction()">Login</a>
+        <script>
+          function myFunction(){
+              window.location.href = 'login.html';
+          }
+        </script>
         <label class="switch">
           <input type="checkbox">
           <span class="slider">
@@ -32,6 +41,7 @@
       </div>
     </div>    
   </div>
+    
   <div class="main">
   <div class="container">
     <h3>Dr. <span>Azza Helal</span></h3>
