--- a/login.html
+++ b/login.html
@@ -51,7 +51,12 @@
       </form>
       
     <p class="register-link">
-      No account? <a href="Registration.html">Register here</a>
+      No account? <a href="Registration.html" onclick="event.preventDefault; loadingRegiester()">Register here</a>
+      <script>
+        function loadingRegiester(){
+          window.location.href = 'registration.html'
+        }
+      </script>
     </p>
   </div>
 </body>
