undid the loading method cause it is alot of work to do alone my mans

--- a/Registration.html
+++ b/Registration.html
@@ -13,34 +13,22 @@
 <body>
     <div class="header">
         <div class="links">
-          <div class="left-links">
-            <a href="bodyFooter.html" class="logo"><img src="images/clinic1.png"></a>
-          </div>
-          <div class="right-links">
-            <a href="#" class="contact-header" onclick="event.preventDefault(); laodingContact()">Contact us</a>
-            <script>
-              function laodingContact(){
-                window.location.href = 'contact.html'
-              }
-            </script>
-            <a href="#serv" class="services-header">Services</a>
-            <a href="#" class="log-in" onclick="event.preventDefault(); myFunction()">Login</a>
-            <script>
-              function myFunction(){
-                  window.location.href = 'login.html';
-              }
-            </script>
-            <label class="switch">
-              <input type="checkbox">
-              <span class="slider">
-                <span class="icon sun">☀️</span>
-                <span class="icon moon">🌙</span>
-              </span>
-            </label>
-          </div>
+            <div class="left-links">
+                <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
+            </div>
+            <div class="right-links">
+                <a href="contact.html" class="contact-header">Contact us</a>
+                <a href="login.html" class="log-in">Login</a>
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider">
+                        <span class="icon sun">☀️</span>
+                        <span class="icon moon">🌙</span>
+                    </span>
+                </label>
+            </div>
         </div>    
-      </div>
-      
+    </div>
     <div class="container">
         <form id="registrationForm">
             <div class="Registration-form">
