--- a/login.html
+++ b/login.html
@@ -13,22 +13,12 @@
   <div class="header">
     <div class="links">
       <div class="left-links">
-        <a href="bodyFooter.html" class="logo"><img src="images/clinic1.png"></a>
+        <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
       </div>
       <div class="right-links">
-        <a href="#" class="contact-header" onclick="event.preventDefault(); laodingContact()">Contact us</a>
-        <script>
-          function laodingContact(){
-            window.location.href = 'contact.html'
-          }
-        </script>
-        <a href="#serv" class="services-header">Services</a>
-        <a href="#" class="log-in" onclick="event.preventDefault(); myFunction()">Login</a>
-        <script>
-          function myFunction(){
-              window.location.href = 'login.html';
-          }
-        </script>
+        <a href="contact.html" class="contact-header">Contact us</a>
+        <a href="login.html" class="log-in">Login</a>
+  
         <label class="switch">
           <input type="checkbox">
           <span class="slider">
@@ -39,7 +29,6 @@
       </div>
     </div>    
   </div>
-  
   <div class="login-container">
     <h1>Login</h1>
     <form>
@@ -51,12 +40,7 @@
       </form>
       
     <p class="register-link">
-      No account? <a href="Registration.html" onclick="event.preventDefault; loadingRegiester()">Register here</a>
-      <script>
-        function loadingRegiester(){
-          window.location.href = 'registration.html'
-        }
-      </script>
+      No account? <a href="Registration.html">Register here</a>
     </p>
   </div>
 </body>
