--- a/bodyFooter.html
+++ b/bodyFooter.html
@@ -17,19 +17,9 @@
         <a href="bodyFooter.html" class="logo"><img src="images/clinic1.png"></a>
       </div>
       <div class="right-links">
-        <a href="#" class="contact-header" onclick="event.preventDefault(); laodingContact()">Contact us</a>
-        <script>
-          function laodingContact(){
-            window.location.href = 'contact.html'
-          }
-        </script>
+        <a href="contact.html" class="contact-header">Contact us</a>
         <a href="#serv" class="services-header">Services</a>
-        <a href="#" class="log-in" onclick="event.preventDefault(); myFunction()">Login</a>
-        <script>
-          function myFunction(){
-              window.location.href = 'login.html';
-          }
-        </script>
+        <a href="login.html" class="log-in">Login</a>
         <label class="switch">
           <input type="checkbox">
           <span class="slider">
@@ -40,9 +30,6 @@
       </div>
     </div>    
   </div>
-  
-  
-  
   <!-- Video Section -->
   <div class="intro-video">
     <div class="video-container">
