linked first doc azza helal

--- a/pediatrics-section.html
+++ b/pediatrics-section.html
@@ -68,7 +68,7 @@
           <img src="images/ped dr 1.jpg" alt="doctor1" class="doctor-image" />
         </div>
         <div class="doctor-info">
-          <a href="#"> Dr.Azza Helal</a>
+          <a href="pediatrician-doc1.html"> Dr.Azza Helal</a>
           <p class="description">caring pediatrician combines expert knowledge with a compassionate approach to ensure your child health.</p>
           <div class="rating">
             <!--stars-->
