--- a/pediatrician-doc2.html
+++ b/pediatrician-doc2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr, Azza Helal</title>
+    <title>Dr, Khaled Hossam</title>
     <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <link rel="icon" href="imgs/clinic1.png" type="image/png">
     <link href="css/bodyFooter.css" rel="stylesheet" type="text/css">
@@ -43,11 +43,11 @@
                     <!-- The Profile Header -->
                     <header class="doctor-profile-header">
                         <div class="doc-icon">
-                            <img src="images/ped dr 1.jpg" alt="">
+                            <img src="images/ped dr 2.jpg" alt="">
                         </div>
                         <div class="doc-text">
                             <div class="title">
-                                <h3>Dr, <span>Azza Helal</span></h3>
+                                <h3>Dr, <span>Khaled Hossam</span></h3>
                                 <h2>Pediatrician</h2>
                             </div>
                             <div class="social-icons">
@@ -64,14 +64,14 @@
                     <!-- About section -->
                     <section class="about-doctor">
                         <div class="about">
-                            <h2>About <span class="doc-name">Dr, Helal</span></h2>
+                            <h2>About <span class="doc-name">Dr, Hossam</span></h2>
                         </div>
                         <div class="doc-bio">
-                            <p>Dr. Azza Helal is a dedicated pediatrician who blends medical expertise with a caring approach to support your child's health. With several years of experience in general pediatrics, she offers reliable care for a wide range of childhood concerns—from routine wellness visits to the management of common illnesses. Dr. Helal is appreciated by many parents for her calm demeanor and straightforward explanations, helping to ease the worries of first-time caregivers.
+                            <p>
+                                Dr. Khaled Hossam is a 36 year old trusted pediatrician who brings a thoughtful, evidence-based approach to children’s healthcare. With eight years of experience, he is known for blending clinical expertise with a calm and friendly manner that puts both children and parents at ease. He earned his medical degree in Pediatrics and has worked in both hospital and outpatient settings. Dr. Hossam is passionate about preventive care and patient education, believing that strong communication is key to supporting a child’s growth and development.
 
-                              While her approach may be more traditional and matter-of-fact than some expect, Dr. Helal remains committed to accurate diagnoses and practical treatment plans. Her priority is your child’s well-being, and she aims to provide consistent, trustworthy care in a busy clinical environment. Dr. Helal continues to build experience and strives to improve the overall patient experience with each visit.
-                              
-                              </p>
+While he may take a more reserved approach compared to some peers, Dr. Hossam is deeply attentive and known for making accurate diagnoses and offering practical, long-term health strategies. His patients benefit from consistent, reliable care in a welcoming clinic environment.
+                            </p>
                         </div>
                     </section>
 
@@ -86,7 +86,7 @@
                                 </div>
                                 <div class="doc-card-info">
                                     <h3>Our Services</h3>
-                                    <p>Parent Consultation & Education, Newborn and Infant Care, Common Illness Diagnosis & Treatment</p>
+                                    <p>Well-Baby and Child Check-Ups, Management of Common Childhood Illnesses, Chronic Condition Care, School Medical Forms and Travel Clearance and Newborn and Infant Care Guidance</p>
                                 </div>
                             </div>
                             <div class="doc-card">
@@ -95,8 +95,8 @@
                                 </div>
                                 <div class="doc-card-info">
                                     <h3>Working Hours</h3>
-                                    <p>Monday - Tuesday - Wednesday - Thursday - Friday - Saturday</p>
-                                    <p>From 9:00 To 2:00</p>
+                                    <p>Tuesday - Thursday - Friday</p>
+                                    <p>From 12:00 To 6:00</p>
                                 </div>
                             </div>
                             <div class="doc-card">
@@ -123,55 +123,55 @@
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Dalida K.</h2>
-                                        <p>"I appreciate her no-nonsense approach and feel confident in her medical judgment. My only wish is that she spent a bit more time addressing our concerns during appointments."</p>
+                                        <h2>Yosra B.</h2>
+                                        <p>"Dr. Khaled has been wonderful with our two boys. He takes time to explain things clearly and doesn't rush through appointments. You can tell he really cares about getting things right."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/3-stars.png" alt="">
+                                        <img src="images/5-stars.png" alt="★★★★★">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Summer H.</h2>
-                                        <p>"I felt a bit rushed during the visit. Dr. Helal seemed distracted, and I didn’t get as much guidance as I had hoped for. The check-up was fine."</p>
+                                        <h2>Doaa H.</h2>
+                                        <p>"Very knowledgeable and accurate, but sometimes he feels a bit too serious or distant when dealing with nervous parents. I appreciate his skill though."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/1-star.png" alt="">
+                                        <img src="images/3-stars.png" alt="★★★☆☆">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Menna A.</h2>
-                                        <p>"Her advice has always been helpful, especially when it comes to managing seasonal colds and allergies."</p>
+                                        <h2>Christine M.</h2>
+                                        <p>"We've been seeing Dr. Hossam since our daughter was born, and he's always been consistent, helpful, and thorough. He helped us catch an early allergy issue that we wouldn't have noticed."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/5-stars.png" alt="">
+                                        <img src="images/5-stars.png" alt="★★★★★">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Sayed G.</h2>
-                                        <p>"She’s good with kids and my son actually doesn’t mind going to the doctor now."</p>
+                                        <h2>Salma S.</h2>
+                                        <p>"We've been seeing Dr. Hossam since our daughter was born, and he's always been consistent, helpful, and thorough. He helped us catch an early allergy issue that we wouldn't have noticed"</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/5-stars.png" alt="">
+                                        <img src="images/5-stars.png" alt="★★★★★">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Hamada. H.</h2>
-                                        <p>"While she may not be super talkative, Dr. Helal listens well and offers solid advice."</p>
+                                        <h2>Loay I.</h2>
+                                        <p>"Clinic wait times can be long even with an appointment. I wish the clinic handled time management better."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/3-stars.png" alt="">
+                                        <img src="images/1-star.png" alt="★☆☆☆☆">
                                     </div>
                                 </div>
                             </div>
