--- a/pediatrician-doc3.html
+++ b/pediatrician-doc3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr, Azza Helal</title>
+    <title>Dr, Hany Essam</title>
     <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <link rel="icon" href="imgs/clinic1.png" type="image/png">
     <link href="css/bodyFooter.css" rel="stylesheet" type="text/css">
@@ -43,11 +43,11 @@
                     <!-- The Profile Header -->
                     <header class="doctor-profile-header">
                         <div class="doc-icon">
-                            <img src="images/ped dr 1.jpg" alt="">
+                            <img src="images/ped dr 3.jpg" alt="">
                         </div>
                         <div class="doc-text">
                             <div class="title">
-                                <h3>Dr, <span>Azza Helal</span></h3>
+                                <h3>Dr, <span>Hany Essam</span></h3>
                                 <h2>Pediatrician</h2>
                             </div>
                             <div class="social-icons">
@@ -64,14 +64,14 @@
                     <!-- About section -->
                     <section class="about-doctor">
                         <div class="about">
-                            <h2>About <span class="doc-name">Dr, Helal</span></h2>
+                            <h2>About <span class="doc-name">Dr, Essam</span></h2>
                         </div>
                         <div class="doc-bio">
-                            <p>Dr. Azza Helal is a dedicated pediatrician who blends medical expertise with a caring approach to support your child's health. With several years of experience in general pediatrics, she offers reliable care for a wide range of childhood concerns—from routine wellness visits to the management of common illnesses. Dr. Helal is appreciated by many parents for her calm demeanor and straightforward explanations, helping to ease the worries of first-time caregivers.
+                            <p>
+                                Dr. Hany Essam is a 39 year old highly regarded pediatrician with over 11 years of clinical experience, known for his exceptional care, gentle manner with children, and clear communication with parents. He holds a degree in Pediatrics with postgraduate training in child development and preventive care. Dr. Hany combines thorough medical knowledge with empathy and patience, making every child feel safe and every parent feel heard.
 
-                              While her approach may be more traditional and matter-of-fact than some expect, Dr. Helal remains committed to accurate diagnoses and practical treatment plans. Her priority is your child’s well-being, and she aims to provide consistent, trustworthy care in a busy clinical environment. Dr. Helal continues to build experience and strives to improve the overall patient experience with each visit.
-                              
-                              </p>
+                                He believes that healthcare is a partnership with families and takes the time to explain every diagnosis and treatment option in plain, understandable language. Whether it’s a routine check-up or a complex health issue, Dr. Hany is known for his attention to detail and steady, reassuring presence. Many families view him as their go-to doctor for long-term care from infancy through adolescence.
+                            </p>
                         </div>
                     </section>
 
@@ -86,7 +86,7 @@
                                 </div>
                                 <div class="doc-card-info">
                                     <h3>Our Services</h3>
-                                    <p>Parent Consultation & Education, Newborn and Infant Care, Common Illness Diagnosis & Treatment</p>
+                                    <p>Comprehensive Well-Child Checkups, Treatment of Acute Illnesses, Chronic Disease Management, Specialist Coordination & Parental Support</p>
                                 </div>
                             </div>
                             <div class="doc-card">
@@ -95,8 +95,8 @@
                                 </div>
                                 <div class="doc-card-info">
                                     <h3>Working Hours</h3>
-                                    <p>Monday - Tuesday - Wednesday - Thursday - Friday - Saturday</p>
-                                    <p>From 9:00 To 2:00</p>
+                                    <p>Thursday - Friday - Saturday</p>
+                                    <p>From 11:00 To 5:00</p>
                                 </div>
                             </div>
                             <div class="doc-card">
@@ -123,55 +123,55 @@
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Dalida K.</h2>
-                                        <p>"I appreciate her no-nonsense approach and feel confident in her medical judgment. My only wish is that she spent a bit more time addressing our concerns during appointments."</p>
+                                        <h2>George F.</h2>
+                                        <p>"Dr. Hany is the best pediatrician we’ve worked with. He listens carefully, never rushes, and explains everything with patience."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/3-stars.png" alt="">
+                                        <img src="images/5-stars.png" alt="★★★★★">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Summer H.</h2>
-                                        <p>"I felt a bit rushed during the visit. Dr. Helal seemed distracted, and I didn’t get as much guidance as I had hoped for. The check-up was fine."</p>
+                                        <h2>Zeina W.</h2>
+                                        <p>" My son actually enjoys his visits!"</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/1-star.png" alt="">
+                                        <img src="images/5-stars.png" alt="★★★★★">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Menna A.</h2>
-                                        <p>"Her advice has always been helpful, especially when it comes to managing seasonal colds and allergies."</p>
+                                        <h2>Youssef T.</h2>
+                                        <p>"Dr. Hany is fantastic, but the clinic is getting busier, and sometimes appointments are delayed. It's worth the wait, though his care is excellent"</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/5-stars.png" alt="">
+                                        <img src="images/5-stars.png" alt="★★★★★">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Sayed G.</h2>
-                                        <p>"She’s good with kids and my son actually doesn’t mind going to the doctor now."</p>
+                                        <h2>Mahmoud L.</h2>
+                                        <p>"I was impressed with how Dr. Hany handled my newborn's checkup. Very gentle, very professional, and even followed up with us a few days later. Rare to find this level of care."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/5-stars.png" alt="">
+                                        <img src="images/5-stars.png" alt="★★★★★">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Hamada. H.</h2>
-                                        <p>"While she may not be super talkative, Dr. Helal listens well and offers solid advice."</p>
+                                        <h2>Medhat K.</h2>
+                                        <p>"Overall, a very good experience. The only issue was that it was hard to get a last-minute appointment. He's in demand, which says a lot, but plan ahead if you can."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/3-stars.png" alt="">
+                                        <img src="images/4-stars.png" alt="★★★★☆">
                                     </div>
                                 </div>
                             </div>
