--- a/pediatrics-section.html
+++ b/pediatrics-section.html
@@ -88,7 +88,7 @@
             <img src="images/ped dr 2.jpg" alt="doctor1" class="doctor-image" />
           </div>
           <div class="doctor-info">
-            <a href="#"> Dr.Khaled Hossam</a>
+            <a href="pediatrician-doc2.html"> Dr.Khaled Hossam</a>
             <p class="description">provides expert pediatric care with a gentle touch.</p>
             <div class="rating">
               <!--stars-->
@@ -108,7 +108,7 @@
               <img src="images/ped dr 3.jpg" alt="doctor1" class="doctor-image" />
             </div>
             <div class="doctor-info">
-              <a href="#"> Dr.Hany Essam</a>
+              <a href="pediatrician-doc3.html"> Dr.Hany Essam</a>
               <p class="description"> offers personalized care to support your child growth and well-being.</p>
               <div class="rating">
                 <!--stars-->
