linked 2 pages to the cardiology.html

--- a/cardiology.html
+++ b/cardiology.html
@@ -58,7 +58,7 @@
         <img src="/images/cardiologist 1.jpg " alt="Doctor" class="doctor-image">
       </div>
       <div class="doctor-info">
-        <a href="#">DR.Ahmed salem</a>
+        <a href="cardiologist-doc1.html">DR.Ahmed salem</a>
         <p class="description">Specialized in treating heart rhythm disorders and arrhythmias</p>
 
         <div class="rating"> <!--stars-->
@@ -78,7 +78,7 @@
         <img src="/images/cardiologist 2.jpg " alt="Doctor" class="doctor-image">
       </div>
       <div class="doctor-info">
-        <a href="#">DR.Tarek Elkhateb</a>
+        <a href="cardiologist-doc2.html">DR.Tarek Elkhateb</a>
         <p class="description">Expert in coronary artery disease and heart failure management</p>
 
         <div class="rating"> <!--stars-->
