--- a/cardiologist-doc3.html
+++ b/cardiologist-doc3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr, Tarek ElKateb</title>
+    <title>Dr, Reem ElHarby</title>
     <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <link rel="icon" href="imgs/clinic1.png" type="image/png">
     <link href="css/bodyFooter.css" rel="stylesheet" type="text/css">
@@ -43,11 +43,11 @@
                     <!-- The Profile Header -->
                     <header class="doctor-profile-header">
                         <div class="doc-icon">
-                            <img src="images/cardiologist 2.jpg" alt="Dr, Tarek ElKateb's MUGSHOT">
+                            <img src="images/cardiologist 3.jpg" alt="Dr, Reem ElHarby's MUGSHOT">
                         </div>
                         <div class="doc-text">
                             <div class="title">
-                                <h3>Dr, <span>Tarek ElKhateb</span></h3>
+                                <h3>Dr, <span>Reem ElHarby</span></h3>
                                 <h2>Cardiologist</h2>
                             </div>
                             <div class="social-icons">
@@ -64,13 +64,13 @@
                     <!-- About section -->
                     <section class="about-doctor">
                         <div class="about">
-                            <h2>About <span class="doc-name">Dr, ElKhateb</span></h2>
+                            <h2>About <span class="doc-name">Dr, ElHarby</span></h2>
                         </div>
                         <div class="doc-bio">
                             <p>
-                                Dr. Tarek El Khateb is a 45 year old respected cardiologist with 15 years of experience in adult cardiovascular care. Known for his balanced approach to patient care, Dr. Tarek combines up-to-date medical knowledge with a personable, respectful manner that puts patients at ease. He earned his cardiology specialization from a top-tier university hospital and has managed hundreds of complex heart conditions with confidence and clarity.
+                                Dr. Reem El Harby is a 36 year old licensed cardiologist with 8 years of experience in the diagnosis and management of heart conditions. She graduated with honors in internal medicine and pursued cardiology with a focus on preventive care and early intervention. Known for her clinical thoroughness, Dr. Reem is detail-oriented and takes a methodical approach to patient evaluations.
 
-                                Dr. El Khateb emphasizes early detection, preventive care, and personalized treatment strategies. He listens attentively and encourages open communication, making sure patients leave the clinic understanding their heart health. His patients often praise his professionalism, though his schedule can be busy due to high demand.
+                                While her medical knowledge is not in doubt, reviews from patients are mixed. Some appreciate her serious and focused style, but others mention difficulties with communication, long wait times, and limited follow-up. She continues to work on improving patient interaction while maintaining strong diagnostic practices.
                             </p>
                         </div>
                     </section>
@@ -86,7 +86,7 @@
                                 </div>
                                 <div class="doc-card-info">
                                     <h3>Our Services</h3>
-                                    <p>General Heart Health Evaluations, Diagnosis & Treatment of Cardiovascular Conditions, Electrocardiograms (ECG), Stress Testing, and Holter Monitoring, Echocardiography</p>
+                                    <p>Cardiac Risk Assessments, ECG, Stress Tests, and Echo Referrals, Diagnosis & Management, Referrals to Specialized Procedures</p>
                                 </div>
                             </div>
                             <div class="doc-card">
@@ -95,8 +95,8 @@
                                 </div>
                                 <div class="doc-card-info">
                                     <h3>Working Hours</h3>
-                                    <p>Monday - Tuesday - Wednesday</p>
-                                    <p>From 11:00AM To 5PM</p>
+                                    <p>Wednesday - Monday - Saturday</p>
+                                    <p>From 12:00PM To 6:00PM</p>
                                 </div>
                             </div>
                             <div class="doc-card">
@@ -123,30 +123,30 @@
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>AbdelRahman A.</h2>
-                                        <p>"Dr. Tarek helped me stabilize my blood pressure after years of struggles. He was patient, listened carefully, and explained every step. I finally feel in control of my heart health.."</p>
+                                        <h2>Boraay F.</h2>
+                                        <p>"Felt rushed and wasn't given time to ask all my questions. I left the clinic more confused than reassured. Hoping for a better experience next time."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/5-stars.png" alt="">
+                                        <img src="images/1-star.png" alt="">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Deez N.</h2>
-                                        <p>"Good doctor, but it was hard to get an appointment. The visit was helpful once I got in, but the wait list was frustrating."</p>
+                                        <h2>Mohamed R.</h2>
+                                        <p>"Dr. Reem seems very knowledgeable, but the clinic was disorganized. Waited 45 minutes past my appointment time, and the consultation felt brief."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/3-stars.png" alt="">
+                                        <img src="images/1-star.png" alt="">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Shaggy W.</h2>
-                                        <p>"He diagnosed my father's heart issue early and guided us through the whole process. Professional and reassuring. Very grateful."</p>
+                                        <h2>Zanaty Z.</h2>
+                                        <p>"She explained the results of my ECG clearly, which I appreciated. But the clinic atmosphere was stressful, and the receptionist wasn't helpful."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/4-stars.png" alt="">
@@ -156,19 +156,19 @@
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Louis V.</h2>
-                                        <p>"Dr. Tarek is very skilled, but I wish he gave a bit more time during consultations. Felt a little rushed, though he answered my questions."</p>
+                                        <h2>Mohamed Z.</h2>
+                                        <p>"Had to return for the same issue twice. The diagnosis was correct eventually, but I wish she'd listened more the first time."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/3-stars.png" alt="">
+                                        <img src="images/1-star.png" alt="">
                                     </div>
                                 </div>
                             </div>
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Bill G.</h2>
-                                        <p>"Clear, calm, and very thorough. He helped me understand what lifestyle changes were actually worth it. A dependable cardiologist."</p>
+                                        <h2>Christian G.</h2>
+                                        <p>"Although the process was a bit slow, Dr. Reem did help adjust my medications effectively. I feel better now, just wish the clinic was more organized."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/4-stars.png" alt="">
