--- a/cardiology.html
+++ b/cardiology.html
@@ -98,7 +98,7 @@
         <img src="/images/cardiologist 3.jpg " alt="Doctor" class="doctor-image">
       </div>
       <div class="doctor-info">
-        <a href="#">DR.Reem Elharby</a>
+        <a href="cardiologist-doc3.html">DR.Reem Elharby</a>
         <p class="description">Focuses on preventive cardiology and advanced heart screening</p>
        
         <div class="rating"> <!--stars-->
